hphp/hack/test/typecheck/generics_restrictions/covariance_decl_conflict_1.php.exp
File "covariance_decl_conflict_1.php", line 5, characters 27-27:
Illegal usage of a covariant type parameter (Typing[4120])
File "covariance_decl_conflict_1.php", line 5, characters 12-12:
This is where the parameter was declared as covariant (+)
File "covariance_decl_conflict_1.php", line 5, characters 27-27:
The type parameter was declared as contravariant (-)
