hphp/hack/test/typecheck/generics_restrictions/covariance_decl_conflict_1.php
<?hh // partial

class Foo<-Tu> {}

class Bar<+T> extends Foo<T> {}
